fix overflowing global width

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -999,7 +999,9 @@ noscript h2 {
 .amd-txt-status{
     position:relative; top: 4px;margin-top:4px;border-radius:20%; display:inline-block; overflow:hidden;min-height:18px;
 }
-
+.row {
+    width: 100%;
+}
 .row-txt{
     cursor:pointer;
 }
